--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django>=3.0.6, <3.1.0
 djangorestframework>=3.11.0, <3.12.0
-psycopg2>=2.8.0
+# psycopg2>=2.8.0
+psycopg2-binary==2.8.5
 Pillow>=6.2.2
 flake8>=3.8.0, <3.9.0
