--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,6 @@ version: "3"
 
 services: 
     app:
-        env_file: .env
         build: 
             context: .
         ports:
@@ -18,6 +17,7 @@ services:
             - DB_NAME=app
             - DB_USER=postgres
             - DB_PASS=supersecretpassword
+            - SECRET_KEY='XXXXSECRETKEY'
         depends_on: 
             - db 
 
