--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,11 +1,10 @@
 option_settings:
- "aws:elasticbeanstalk:application:environment":
-   DJANGO_SETTINGS_MODULE: "app/app.settings"
-   PYTHONPATH: "$PYTHONPATH"
  "aws:elasticbeanstalk:container:python":
-   WSGIPath: "app/app/wsgi.py"
-   StaticFiles: "/static/=www/static/"
-   MediaFiles: "/static/=www/media/"
+   NumProcesses: 3
+   NumThreads: 20
+   WSGIPath: app/app/wsgi.py
+   StaticFiles: /static/=www/static/
+   MediaFiles: /static/=www/media/
 
 packages:
  yum:
