second fix to python.config for static and media files

--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -3,8 +3,8 @@ option_settings:
    NumProcesses: 3
    NumThreads: 20
    WSGIPath: app/app/wsgi.py
-   StaticFiles: /static/=www/static/
-   MediaFiles: /static/=www/media/
+   StaticFiles: /static/=static/
+   MediaFiles: /static/=media/
 
 packages:
  yum:
