--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,10 +1,13 @@
 option_settings:
+ "aws:elasticbeanstalk:application:environment":
+   DJANGO_SETTINGS_MODULE: "app.settings"
+   PYTHONPATH: "/opt/python/current/app/app/$PYTHONPATH"
  "aws:elasticbeanstalk:container:python":
+   WSGIPath: app/app/wsgi.py
    NumProcesses: 3
    NumThreads: 20
-   WSGIPath: app/app/wsgi.py
-   StaticFiles: /static/=static/
-   MediaFiles: /static/=media/
+ "aws:elasticbeanstalk:container:python:staticfiles":
+   "/static/": "www/static/"
 
 packages:
  yum:
