--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,13 +1,14 @@
 option_settings:
  "aws:elasticbeanstalk:application:environment":
    DJANGO_SETTINGS_MODULE: "app.settings"
-   PYTHONPATH: "/opt/python/current/app/app/$PYTHONPATH"
  "aws:elasticbeanstalk:container:python":
    WSGIPath: app/app/wsgi.py
    NumProcesses: 3
    NumThreads: 20
- "aws:elasticbeanstalk:container:python:staticfiles":
-   "/static/": "www/static/"
+ "aws:elasticbeanstalk:container:proxy:staticfiles":
+   /html: statichtml
+   /images: staticimages
+   /css: staticcss
 
 packages:
  yum:
