test of config file

--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -2,11 +2,11 @@ option_settings:
  "aws:elasticbeanstalk:application:environment":
    DJANGO_SETTINGS_MODULE: "app.settings"
  "aws:elasticbeanstalk:container:python":
-   WSGIPath: app/app/wsgi.py
+   WSGIPath: app/app/wsgi.py:application
    NumProcesses: 3
    NumThreads: 20
  "aws:elasticbeanstalk:container:proxy:staticfiles":
-   /html: statichtml
+   /html: "statichtml"
    /images: staticimages
    /css: staticcss
 
